--- a/app/src/main/res/layout/home_base.xml
+++ b/app/src/main/res/layout/home_base.xml
@@ -30,9 +30,10 @@
             android:theme="@style/Widget.BottomNavigationView"
             app:itemIconTint="@color/bottom_menu_colors"
             app:itemTextColor="@color/bottom_menu_colors"
-            app:labelVisibilityMode="labeled"
+            app:labelVisibilityMode="unlabeled"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:menu="@menu/home_menu" />
+            app:menu="@menu/home_menu"
+            />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
