--- a/app/src/main/res/menu/home_menu.xml
+++ b/app/src/main/res/menu/home_menu.xml
@@ -1,4 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <item
+        android:id="@+id/home"
+        android:icon="@drawable/home"
+        android:title="@string/home" />
+
+    <item
+        android:id="@+id/orders"
+        android:icon="@drawable/delivery_service"
+        android:title="@string/orders" />
+
+    <item
+        android:id="@+id/notifications"
+        android:icon="@drawable/notification"
+        android:title="@string/notifications" />
+
+    <item
+        android:id="@+id/profile"
+        android:icon="@drawable/user"
+        android:title="@string/profile" />
 </menu>
