--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="lava">#CE1414</color>
     <color name="darkTangerine">#FC9B19</color>
     <color name="lightGray">#D5D5D5</color>
+    <color name="oldSilver">#858585</color>
     <color name="cultured">#CDF5F5F5</color>
     <color name="seaSerpent">#5CC3D9</color>
     <color name="blueLight">#702196F3</color>
