--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,8 +10,8 @@
         <item name="colorPrimaryDark">@color/darkTangerine</item>
         <item name="android:panelColorBackground">@color/darkTangerine</item>
         <item name="android:actionBarStyle">@style/MyActionBar</item>
-        <item name="android:fontFamily">@font/poppins_bold</item>
-        <item name="fontFamily">@font/poppins_bold</item>
+        <item name="android:fontFamily">@font/poppins_regular</item>
+        <item name="fontFamily">@font/poppins_regular</item>
     </style>
 
     <style name="MyActionBar" parent="@android:style/Widget.Holo.Light.ActionBar">
@@ -29,8 +29,8 @@
         <item name="android:actionBarStyle">@style/FullscreenActionBarStyle</item>
         <item name="android:windowActionBarOverlay">true</item>
         <item name="android:windowBackground">@null</item>
-        <item name="android:fontFamily">@font/poppins_bold</item>
-        <item name="fontFamily">@font/poppins_bold</item>
+        <item name="android:fontFamily">@font/poppins_regular</item>
+        <item name="fontFamily">@font/poppins_regular</item>
     </style>
 
     <style name="title">
